--- a/task2/1.html
+++ b/task2/1.html
@@ -9,8 +9,8 @@
 <body>
   <div class="box">
     <h1>Todo App</h1>
-    <input type="text" id="titleInput" placeholder="Enter a title">
-    <input type="text" id="taskInput" placeholder="Enter a task">
+    <input type="text" id="titleInput" placeholder="Enter a title" required>
+    <input type="text" id="taskInput" placeholder="Enter a task" required>
     <button onclick="addTask()">Add Task</button>
     <div id="taskList"></div>
   </div>
